--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
+
 	<name>springbootdemo</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -22,9 +23,16 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<spring-boot.mybatis.version>1.1.1</spring-boot.mybatis.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>${spring-boot.mybatis.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -100,6 +108,19 @@
 				<configuration>
 					<!-- 如果没有该项配置，devtools不会起作用，即应用不会restart 热部署插件-->
 					<fork>true</fork>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.3.5</version>
+				<configuration>
+					<!-- 在控制台打印执行日志 -->
+					<verbose>true</verbose>
+					<!-- 重复生成时会覆盖之前的文件-->
+					<overwrite>true</overwrite>
+					<configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
 				</configuration>
 			</plugin>
 		</plugins>
